2017-04-15  Matthew Mundell <matthew.mundell@greenbone.net>

	* gmp/gmp.c (gmp_ping_c): Correct check.

2017-04-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* gmp/gmp.c (gmp_ping_c): New function.

	* gmp/gmp.h: Add header accordingly.

2017-04-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/nvticache.c (nvticache_add): Use kb_item_add_*() instead of
	kb_item_set_*() as values are already deleted.

2017-04-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/nvticache.c (nvticache_remove): New function.
	(nvticache_add): Use new function to remove duplicate nvt entries.

2017-04-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/networking.c (sockaddr_as_str): Add cases for UNIX, unknown
	and other socket types.

2017-03-30  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/CMakeLists.txt: Enable largefile support when building with
	GPGME since GPGME is compiled with largefile support by default and
	requires applications using the library to be compiled with the same
	file size mode.

2017-03-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/nvticache.c (nvticache_get_by_name_full)
	(nvticache_get_by_oid_full, nvticache_get_names)

	* util/nvticache.h: Remove functions prototypes.

2017-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/kb.c (redis_save): New function.
	(KBOperations): Set kb_save to redis_save.

	* util/kb.h (struct kb_operations): Add kb_save operation.
	(kb_save): New function.

	* util/nvticache.c (nvticache_save): New function.
	(nvticache_add): Set cache_saved to 0 when adding a new nvti to the
	cache.

	* util/nvticache.h: Add new function prototype.

2017-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/nvticache.c (nvticache_init): Adjust documentation to recent
	API change.

2017-03-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* util/kb.c (redis_add_str): Use redis_cmd() instead of a full
	transaction.